--- a/package.json
+++ b/package.json
@@ -10,26 +10,18 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@skeletonlabs/skeleton": "2.7.1",
-    "@skeletonlabs/tw-plugin": "0.3.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.11.5",
-    "autoprefixer": "10.4.17",
-    "postcss": "8.4.33",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "vite-plugin-tailwind-purgecss": "0.2.0"
+    "vite": "^5.0.3"
   },
   "type": "module",
   "dependencies": {
-    "@floating-ui/dom": "1.5.4",
     "pocketbase": "^0.20.3",
     "pocketbase-typegen": "^1.2.1"
   }
